# unconcealer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CLAUDE-DESKTOP.md  DEBUG_SESSION.md  GDB_BRIDGE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  MCP-UX-REVIEW.md  MODEL_ABSTRACTION.md  QEMU_CONTROL.md
src/unconcealer/: __init__.py  __main__.py  cli.py  cmd.py
src/unconcealer/agent/: __init__.py  orchestrator.py  tools.py
src/unconcealer/agent/providers/: __init__.py  base.py  claude.py  openai_compat.py
src/unconcealer/analysis/: __init__.py
src/unconcealer/arch/: __init__.py  base.py  cortex_m.py  riscv.py
src/unconcealer/core/: __init__.py  session.py  types.py
src/unconcealer/mcp/: __init__.py  session_manager.py  stdio_server.py
src/unconcealer/skills/: __init__.py
src/unconcealer/targets/: __init__.py
src/unconcealer/tools/: __init__.py  gdb_bridge.py  qemu_control.py
test_fw/: CLAUDE.md  Cargo.toml  memory.x
test_fw/.cargo/: config.toml
test_fw/src/: main.rs
tests/: __init__.py  conftest.py  test_agent_tools.py  test_arch.py  test_gdb_bridge.py  test_mcp_server.py  test_orchestrator.py  test_providers.py  test_qemu_control.py  test_session.py
