[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unconcealer"
version = "0.1.0"
description = "AI-powered embedded systems debugger using Claude and QEMU/GDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "clockdomain", email = "bookofenoch68@outlook.com" }
]
keywords = ["embedded", "debugging", "qemu", "gdb", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "claude-agent-sdk>=0.1.25",
    "pygdbmi>=0.11.0.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
    "pyelftools>=0.29",
    "tree-sitter>=0.20.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "sqlite-utils>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
rust = [
    "tree-sitter-rust>=0.20.0",
]

[project.scripts]
unconcealer = "unconcealer.cli:app"
unc = "unconcealer.cli:app"  # Short alias

[project.urls]
Homepage = "https://github.com/clockdomain/unconcealer"
Documentation = "https://clockdomain.github.io/unconcealer"
Repository = "https://github.com/clockdomain/unconcealer"

[tool.hatch.build.targets.wheel]
packages = ["src/unconcealer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
